--- a/style.css
+++ b/style.css
@@ -55,3 +55,18 @@ footer{
 a:hover{
     background-color: yellow;
 }
+
+div.formulario{
+    background-color: lightsalmon;
+    color: blue;
+    width: 900px;
+    height: 500px;
+    position: absolute;
+    top: 20%;
+    left: 10%;
+    text-align: center;
+    font-size: 22px;
+}
+textarea{
+    resize: none;
+}
