--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ footer{
 }
 a:hover{
     background-color: yellow;
+    color: black;
 }
 
 div.formulario{
@@ -70,3 +71,4 @@ div.formulario{
 textarea{
     resize: none;
 }
+
